compiler/tests/ar/errors/match_duplicate_pattern.salam
// لغة: العربية
// توقع: E078
تعداد لون:
    أحمر
    أخضر
نهاية

دالة الرئیسیة:
    ک := لون.أحمر
    طابق ک:
        أحمر: اطبع "ر1" نهاية
        أحمر: اطبع "ر2" نهاية
        وإلا: اطبع "آخر" نهاية
    نهاية
نهاية
